Fix tablet portfolio card gap and width

--- a/src/components/PortfolioCard/PortfolioCard.module.scss
+++ b/src/components/PortfolioCard/PortfolioCard.module.scss
@@ -171,7 +171,7 @@
 
 @media (min-width: 768px) and (max-width: 1336px) {
   .card {
-    width: calc(50% - 15px);
+    width: calc(50% - 2.4vw);
     height: 52vw;
     background: #ffffff;
     padding: 1.7vw;
