--- a/src/pages/Portfolio/Portfolio.module.scss
+++ b/src/pages/Portfolio/Portfolio.module.scss
@@ -49,7 +49,7 @@
     margin-bottom: 120px;
     display: flex;
     flex-wrap: wrap;
-    grid-gap: 30px;
+    grid-gap: 4.8vw;
   }
   
   .contacts {
